--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cities Filter 👀</title>
 </head>
 <body>
-    <form class="search-form" action="##">
+    <form class="search-form">
         <input type="text" class="search" placeholder="City or State">
         <ul class="suggestions">
             <li>Filter for a city</li>
